- MANTA-222 support bwa-mem '-M' split read format
- MANTA-218 filter spanning candidates without signifcant signal/noise
- MANTA-155 handle N's and lowqual bases during assembly
- MANTA-219 Build system improvements for auditing, visual studio support
- MANTA-217 Improve runtime for large min candidate size settings, creating
a high speed large-event mode.
v0.25.0
- RNA - parameter adjustments, additional vcf output, orientation fixes
- MANTA-187 treat split reads symmetrically to improve RNA fusion detection
-- detect split reads directly rather than via associated soft-clip sequence
-- exclude split reads from contributing to local assembly evidence
v0.24.0
- MANTA-213 FFPE runtime optimization:
-- Recognize new BAM format for fragments shorter than read length,
prevent these reads from triggering assembly.
-- Improve insert size distribution estimation by including fragments shorter
than read length.
-- Add new runtime instrumentation report for candidate generation
-- Add runtime summary to existing graph report
-- Reduce SW edit matrix size with short k-mer match bounds on ref seq
-- Improve graph noise filtration by testing specific region for evidence
signal threshold
-- Use adaptive noise rates in hypoth gen step: background read anomaly rate
is used to determine if signal is significant. Currently applies to small
assembly candidates only.
-- Collapse redundant assembly candidates for small indels to single copy
v0.23.1
- MANTA-206 Disable remote read search in T/N analysis
- MANTA-195 Improve filtration of short fragments in FFPE samples
v0.23.0
- MANTA-200 Add filter for overlapping diploid calls which can't be explained
as two haplotypes.
- MANTA-199 Fix low-frequency fragment/breakpoint mismatch (primarily
an issue when large numbers of short ref contigs were used)
- Add CRAM support for individual tools - still need a quick chrom depth estimator
for full workflow CRAM support
- c++11 update