@@ -1,3 +1,4 @@
+- MANTA-234 remove discovery pair counts from scored output files
 - MANTA-222 support bwa-mem '-M' split read format
 - MANTA-218 filter spanning candidates without signifcant signal/noise
 - MANTA-155 handle N's and lowqual bases during assembly
